--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Build site
         run: |
-          nix-shell default.nix --run "Rscript -e 'pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)'"
+          nix-shell default.nix --run "Rscript -e 'pkgdown::build_site_github_pages(new_process = FALSE, install = TRUE)'"
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
